# tricore-qemu-gdb-counter-demo

./: LICENSE  README.md  docker-compose.yml
dev-container/: Dockerfile
scripts/: build.sh  launch.sh
scripts/toolchains/: tricore.cmake
src/: CMakeLists.txt  crt0.S  link.ld  main.c  start.c
